--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -1,22 +1,21 @@
-{% extends "vol/base_homepage.html" %}
-
+{% extends 'vol/base_homepage.html' %}
+{% block title %} Profil utilisateurs {% endblock %}
 {% block content %}
 
-
-
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
-            <h1>Base de données de vol.</h1>
+            <h1>{{ user.first_name }} {{ user.last_name }}</h1>
         </div>
         <div class="col-3"></div>
     </div>
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
-            <p>Cette application vous permettra de saisir et sauvegarder vos heures de vol de manière simple et sécurisée.</p>
+            {{ user.email }}
         </div>
         <div class="col-3"></div>
     </div>
+
 
 {% endblock %}
