Ajout d'onglets dans le header

--- a/vol/templates/registration/logged_out.html
+++ b/vol/templates/registration/logged_out.html
@@ -8,7 +8,7 @@
         <p>Logged out!</p>
     </div>
     <div class="row">
-        <p><a href="{% url 'login' %}">Click here to login again</a></p>
+        <p><a href="/">Homepage</a></p>
     </div>
 
 </div>
