--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -2,20 +2,27 @@
 {% block title %} Profil utilisateurs {% endblock %}
 {% block content %}
 
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-            <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+{% if user == "AnonymousUser" %}
+<p>Please {% url 'login' %} to see this page.</p>
+{% else %}
+    {% if user.is_authenticated %}
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-            {{ user.email }}
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                {{ user.email }}
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3"></div>
-    </div>
-
+    {% else %}
+    <p>Please {% url 'login' %} to see this page.</p>
+    {% endif %}
+{% endif %}
 
 {% endblock %}
