--- a/vol/templates/registration/password_reset_done.html
+++ b/vol/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "vol/base_no_container.html" %}
+{% extends "vol/base_homepage.html" %}
 
 {% block content %}
   <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
