--- a/vol/templates/registration/password_reset_complete.html
+++ b/vol/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "vol/base_no_container.html" %}
+{% extends "vol/base_homepage.html" %}
 
 {% block content %}
   <h1>The password has been changed!</h1>
