--- a/vol/templates/registration/password_reset_form.html
+++ b/vol/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "vol/base_no_container.html" %}
+{% extends "vol/base_homepage.html" %}
 
 {% block content %}
   <form action="" method="post">
@@ -6,7 +6,8 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
-      <p>{{ form.email }}</p>
+    <p>{{ form.email.label_tag }}</p>
+    <p>{{ form.email }}</p>
     <input type="submit" class="btn btn-default btn-lg" value="Reset password">
   </form>
 {% endblock %}
