--- a/vol/templates/registration/login.html
+++ b/vol/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<div class="container">
     <div class="row">
         <h2 class="display-4 mt-4 mb-4">Login</h2>
     </div>
@@ -42,14 +42,14 @@
             <p><button class="btn btn-lg btn-primary btn-block btn-sm" type="submit" value="Login">Login</button>
                 <input type="hidden" name="next" value="{{ next }}"></p>
 
-            </form>
+        </form>
 
         </div>
         <div class="row">
             {# Assumes you setup the password_reset view in your URLconf #}
             <p><a href="{# url 'password_reset' #}">Password lost?</a></p>
         </div>
-
+</div>
 
 
 {% endblock %}
